apps/humanatlas.io/src/app/components/menu-tree/menu-tree.component.scss
:host {
  --mat-icon-color: white;
  .menu-tree-button {
    background-color: #444c65;
    z-index: 2;
  }
}

::ng-deep {
  .example-tree-invisible {
    display: none;
  }

  .mat-tree {
    width: 26rem;
    border: 1px solid #e0e0e0;
    border-radius: 0px 0px 8px 8px;
    height: auto;
    overflow-y: auto;
    padding: 0.5rem 0;

    &:has(hubmap-nav) {
      height: calc(100vh - 4rem);
    }
  }

  .inverse {
    transform: rotate(180deg);
    display: inline-block;
  }

  .menu-tree-backdrop {
    margin-top: 4rem;
  }

  .component-title {
    display: inline-block;
    margin-bottom: 0.5rem;
    margin-left: 1rem;
  }

  .menu-tree-panel {
    .mat-mdc-icon-button.mat-mdc-button-base {
      --mdc-icon-button-state-layer-size: 1.5rem;
      padding: 0;
    }
  }
}

.mat-parent-node {
  display: flex;
  align-items: center;
  gap: 0.25rem;
}

.mat-tree-node,
.mat-parent-node {
  font-size: 1rem;
  color: #444c65;
  font-weight: 300;
  line-height: 1.5rem;
}

.mat-tree-node {
  flex-direction: column;
  align-items: flex-start;
  justify-content: center;
}

.mat-nested-tree-node:not([aria-expanded='true']):hover,
.mat-tree > .mat-tree-node:hover {
  background: rgba(0, 0, 0, 0.04);
}

.mat-tree-node {
  z-index: 1;
}

.mat-tree-node[aria-level='2']:hover::after {
  position: absolute;
  content: '';
  inset: 0 -2rem;
  z-index: -1;
  background: rgba(0, 0, 0, 0.04);
}

.mat-tree > .nav-open:hover {
  background: unset;
}

.mat-tree > .hubmap-nav-menu-node {
  cursor: pointer;
  display: block;
  padding: 0;
  --mat-tree-node-min-height: 2.5rem;

  &[aria-expanded='true']:hover {
    background: unset;
  }

  .mat-parent-node {
    padding: 0.5rem 1rem;
  }
}

